src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/DifferentTypeNotSpecifyingDeclaringType.t.cs
// Error LAMA5106 on `Invalidate`: `Invalid [InvalidateCache] aspect on 'DifferentTypeNotSpecifyingDeclaringType.InvalidatingClass.Invalidate()': there is no method named 'DoAction' in type 'DifferentTypeNotSpecifyingDeclaringType.InvalidatingClass'.`